--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -106,8 +106,13 @@
             <div class="col-sm-10">
               <input type="checkbox"
                      id="active"
+                     name="active"
+                     class="inline-block"
                      ng-model="key.active"
                      ng-disabled="_loading">
+              <label for="active" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Active">
+                <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
           <div class="form-group">
@@ -118,8 +123,13 @@
             <div class="col-sm-10">
               <input type="checkbox"
                      id="read_only_status"
+                     name="read_only_status"
+                     class="inline-block"
                      ng-model="key.read_only_status"
                      ng-disabled="_loading">
+              <label for="read_only_status" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Read Only">
+                <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
           <div class="form-group">
@@ -148,22 +158,32 @@
             <label class="col-sm-2 control-label">Permissions</label>
 
             <div class="col-sm-10">
-                <div class="col-sm-2 inline-block">
-                  <input type="checkbox" ng-model="key.allowed_ops.read_config" ng-disabled="_loading"> Read <br>
-                  <input type="checkbox" ng-model="key.allowed_ops.modify_config" ng-disabled="_loading"> Modify <br>
-                  <input type="checkbox" ng-model="key.allowed_ops.delete_config" ng-disabled="_loading"> Delete <br>
-                  <input type="checkbox" ng-model="key.allowed_ops.purge" ng-disabled="_loading"> Purge <br>
-                  <input type="checkbox" ng-model="key.allowed_ops.reports" ng-disabled="_loading"> Reports <br>
-                  <input type="checkbox" ng-model="key.allowed_ops.admin" ng-disabled="_loading"> Admin <br>
+                <div class="col-sm-2">
+                  <input type="checkbox" class="inline-block" name="read_config" ng-model="key.allowed_ops.read_config" ng-disabled="_loading"> Read
+                  <label for="read_config" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Read">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
+                  <input type="checkbox" class="inline-block" name="modify_config" ng-model="key.allowed_ops.modify_config" ng-disabled="_loading"> Modify
+                  <label for="modify_config" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Modify">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
+                  <input type="checkbox" class="inline-block" name="delete_config" ng-model="key.allowed_ops.delete_config" ng-disabled="_loading"> Delete
+                  <label for="delete_config" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Delete">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
+                  <input type="checkbox" class="inline-block" name="purge" ng-model="key.allowed_ops.purge" ng-disabled="_loading"> Purge
+                  <label for="purge" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Purge">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
+                  <input type="checkbox" class="inline-block" name="reports" ng-model="key.allowed_ops.reports" ng-disabled="_loading"> Reports
+                  <label for="reports" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Reports">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
+                  <input type="checkbox" class="inline-block" name="admin" ng-model="key.allowed_ops.admin" ng-disabled="_loading"> Admin
+                  <label for="admin" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Admin">
+                        <i class="fa fa-question-circle"></i>
+                  </label><br>
                 </div>
-                <label popover-append-to-body="{{true}}"
-                   class="text-info"
-                   popover-append-to-body="{{true}}"
-                   popover-trigger="mouseenter"
-                   uib-popover="Permissions">
-                    <i class="fa fa-question-circle"></i>
-                </label>
-
             </div>
           </div>
           <hr>
