--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -74,45 +74,47 @@
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
           <crud-pagination ng-if="records !== null"></crud-pagination>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>
-                  <a href="" ng-click="order('datetime')">Date/Time</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'datetime'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>
-                  <a href="" ng-click="order('user_name')">User</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'user_name'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>
-                  <a href="" ng-click="order('activity_type')">Activity Type</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'activity_type'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>
-                  <a href="" ng-click="order('activity_target')">Activity Target</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'activity_target'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="log in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-                <td>{{ getRelativeDate(log.datetime) }}</td>
-                <td>
-                  <i class="glyphicon glyphicon-user"></i>&nbsp; {{log.user_name}}
-                </td>
-                <td>
-                  <!--<i class="glyphicon glyphicon-plus-sign"></i>&nbsp;-->
-                  {{getActivityType(log.activity_type)}}
-                </td>
-                <td>
-                  <div ng-click="showDetails(log)" class="log-details">
-                    <i class="glyphicon glyphicon-plus-sign"></i>&nbsp; {{getActivityTarget(log)}}
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>
+                    <a href="" ng-click="order('datetime')">Date/Time</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'datetime'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="order('user_name')">User</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'user_name'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="order('activity_type')">Activity Type</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'activity_type'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="order('activity_target')">Activity Target</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'activity_target'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="log in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                  <td>{{ getRelativeDate(log.datetime) }}</td>
+                  <td>
+                    <i class="glyphicon glyphicon-user"></i>&nbsp; {{log.user_name}}
+                  </td>
+                  <td>
+                    <!--<i class="glyphicon glyphicon-plus-sign"></i>&nbsp;-->
+                    {{getActivityType(log.activity_type)}}
+                  </td>
+                  <td>
+                    <div ng-click="showDetails(log)" class="log-details">
+                      <i class="glyphicon glyphicon-plus-sign"></i>&nbsp; {{getActivityTarget(log)}}
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <crud-pagination ng-if="records !== null"></crud-pagination>
         </div>
       </div>
