--- a/code/dev/parts/waf_rules/edit.html
+++ b/code/dev/parts/waf_rules/edit.html
@@ -24,8 +24,7 @@
           <div class="form-group" ng-class="{ 'has-error': editForm.rule_name.$invalid && editForm.rule_name.$dirty }">
             <label for="rule_name" class="col-sm-2 control-label">Rule Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_name" name="rule_name"
-                id="rule_name" placeholder="WAF Rule Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="50" required>
+              <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_name" name="rule_name" id="rule_name" placeholder="WAF Rule Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="50" required>
               <label for="rule_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="WAF Rule name (50 characters max)">
                 <i class="fa fa-question-circle"></i>
               </label>
@@ -34,27 +33,10 @@
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{'has-error': editForm.description.$invalid && editForm.description.$dirty }">
-            <label for="description" class="col-sm-2 control-label">Description</label>
-            <div class="col-md-10">
-              <div class="col-sm-12 form-group">
-                <textarea id="description" placeholder="Description (max 300 symbol)" class="form-control inline-block" name="description"
-                  ng-model="model.comment" ng-disabled="_loading" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-maxlength="300">
-                </textarea>
-                <label for="description" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a free-text description about the WAF Rule (300 characters max)">
-                  <i class="fa fa-question-circle"></i>
-                </label>
-              </div>
-              <div class="error-messages" ng-messages="editForm.description.$error" role="alert" ng-messages-multiple>
-                <div ng-messages-include="parts/shared/error-messages.html"></div>
-              </div>
-            </div>
-          </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty }">
             <label for="account_id" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
-              <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)"
-                style="min-width: 550px;" id="account_id" name="accountId" required>
+              <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
@@ -72,8 +54,7 @@
           <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': editForm.ruleType.$invalid && editForm.ruleType.$dirty }">
             <label for="rule_type" class="col-sm-2 control-label">WAF Rule Type</label>
             <div class="col-sm-10">
-              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_type" id="rule_type" name="ruleType"
-                ng-options="obj.id as obj.typeName for obj in rule_types" required>
+              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_type" id="rule_type" name="ruleType" ng-options="obj.id as obj.typeName for obj in rule_types" required>
                 <option value="">--- Select WAF Rule Type ---</option>
               </select>
               <label for="rule_type" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select WAF Rule Type">
@@ -84,12 +65,11 @@
               </div>
             </div>
           </div>
-          <!-- Visibility -  Rules with “visibility” set to “private” should be visible to “revadmin” role only -->
+            <!-- Visibility -  Rules with “visibility” set to “private” should be visible to “revadmin” role only -->
           <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': editForm.visibility.$invalid && editForm.visibility.$dirty }">
             <label for="rule_type" class="col-sm-2 control-label">WAF Rule Visibility</label>
             <div class="col-sm-10">
-              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.visibility" id="rule_type" name="ruleType"
-                ng-options="obj.id as obj.typeName for obj in visibility_types" required>
+              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.visibility" id="rule_type" name="ruleType" ng-options="obj.id as obj.typeName for obj in visibility_types" required>
                 <option value="">--- Select WAF Rule Visibility ---</option>
               </select>
               <label for="rule_type" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select WAF Rule Type">
@@ -104,8 +84,7 @@
             <label for="rule_body" class="col-sm-2 control-label">WAF Rule Statements *</label>
             <div class="col-md-10">
               <div class="col-sm-12 form-group">
-                <textarea id="rule_body" placeholder="Public WAF Rule" class="form-control text--courier inline-block" name="rule_body" ng-model="model.rule_body"
-                  ng-disabled="_loading" ng-maxlength="10000" required>
+                <textarea id="rule_body" placeholder="Public WAF Rule" class="form-control text--courier inline-block" name="rule_body" ng-model="model.rule_body" ng-disabled="_loading" ng-maxlength="10000" required>
                 </textarea>
                 <label for="rule_body" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="WAF Rule Statements">
                   <i class="fa fa-question-circle"></i>
@@ -116,22 +95,34 @@
               </div>
             </div>
           </div>
+          <div class="form-group" ng-class="{'has-error': editForm.comment.$invalid && editForm.comment.$dirty }">
+            <label for="comment" class="col-sm-2 control-label">Comment</label>
+            <div class="col-md-10">
+              <div class="col-sm-12 form-group">
+                <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control inline-block" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-maxlength="300">
+                </textarea>
+                <label for="comment" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the SSL WAF Rule (300 characters max)">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
+              <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
+            </div>
+          </div>
           <hr>
           <div class="form-group ">
             <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-info" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="validateWAFRule(model)">
+              <button class="btn btn-info" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()" ng-click="validateWAFRule(model)">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-check'"></i>&nbsp; Verify
               </button>
-              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="updateWAFRule(model)" uib-tooltip="{{WAFRule_update_help_info}}">
+              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()" ng-click="updateWAFRule(model)" uib-tooltip="{{WAFRule_update_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-file'"></i>&nbsp; Update
               </button>
-              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="publishWAFRule(model)" uib-tooltip="{{WAFRule_publish_help_info}}">
+              <button class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()" ng-click="publishWAFRule(model)" uib-tooltip="{{WAFRule_publish_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i> &nbsp; Publish
               </button>
             </div>
