--- a/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
+++ b/code/dev/parts/domains/domain-acl-rules/domain-acl-rules-item.tpl.html
@@ -1,21 +1,17 @@
-<div class="domai-acl-rules--item panel panel-default" ng-form="aclRuleForm">
+<div class="domain-acl-rules--item panel panel-default" ng-form="aclRuleForm">
   <div class="panel-heading">
-    <div class="pull-left panel-buttons-left">
-    </div>
-
     <div class="pull-right panel-button-right">
-      <!-- remove acl rule -->
-      <a href="" ng-click="$ctrl.onRemoveACLRule($event, $index)" popover-trigger="mouseenter" popover-placement="left"
-        uib-popover="Remove Rule">
+      <!-- button Remove the ACL Condition-->
+      <a href="" ng-click="$ctrl.onRemoveACLRule($event, $index)" popover-trigger="mouseenter" popover-placement="left" uib-popover="Remove the ACL Condition">
       <i class="glyphicon glyphicon-remove"></i>
        </a>
     </div>
     <div class="panel-title">&nbsp;</div>
   </div>
   <div class="panel-body">
-    <div class="form-group" ng-class="{ 'has-error': aclRuleForm.IP_CIDR.$invalid && aclRuleForm.IP_CIDR.$dirty }">
-      <label class=" col-md-3  control-label"> IP Subnet In CIDR Format</label>
-      <div class="col-md-9">
+    <div class="form-group">
+      <label class=" col-md-3 control-label"> IP Subnet In CIDR Format</label>
+      <div class="col-md-9" ng-class="{ 'has-error': aclRuleForm.IP_CIDR.$invalid && aclRuleForm.IP_CIDR.$dirty }">
         <input class="form-control inline-block" ng-model="IP_CIDR" name="IP_CIDR" placeholder="like  8.8.8.0/24" validate-cidr-format>
         <label for="country_code" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Specify here optional end user’s IP subnet in CIDR format (like 8.8.8.0/24). Use
             /32 mask for IP addresses (for example, 4.4.4.4/32).">
@@ -43,37 +39,39 @@
       </div>
     </div>
 
-    <div class="form-group col-sm-12 col-md-6">
-      <div class="row">
-        <label class=" col-md-4 control-label"> Request Header Name</label>
-        <div class="col-sm-12 col-md-7" ng-class="{'has-error': aclRuleForm.headerName.$invalid}">
-          <input type="text" ng-animate-disabled validate-caching-rule-header-name name="headerName" class="form-control inline-block"
-            ng-model="$ctrl.aclRule.header_name" placeholder="" ng-maxlength="128" required>
-          <div class="error-messages" ng-messages="aclRuleForm.headerName.$error" role="alert" ng-messages-multiple="false">
-            <div ng-messages-include="parts/shared/error-messages.html"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class=" form-group col-sm-12 col-md-6">
-      <div class="row">
-        <label class="col-md-4 control-label"> Request Header Value</label>
-        <div class="col-sm-12 col-md-7" ng-class="{'has-error': aclRuleForm.headerValue.$invalid}">
-          <input ng-animate-disabled validate-caching-rule-header-value type="text" name="headerValue" class="form-control inline-block"
-            ng-model="$ctrl.aclRule.header_value" placeholder="" ng-maxlength="128" required>
-          <div class="error-messages" ng-messages="aclRuleForm.headerValue.$error" role="alert" ng-messages-multiple="false">
-            <div ng-messages-include="parts/shared/error-messages.html"></div>
-          </div>
-        </div>
-        <label for="country_code" class="text-info row col-md-1" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Specify here optional request header name and its value which will trigger the condition. For example you can
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <label class="panel-title inline-block"> Request Header</label>
+        <label for="country_code" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Specify here optional request header name and its value which will trigger the condition. For example you can
           specify header name “Referer” and your website URL as header value - this will allow you to block requests referred
           from unauthorized websites.">
                     <i class="fa fa-question-circle"></i>
                   </label>
       </div>
-
+      <div class="panel-body">
+        <div class="col-md-9">
+          <div class="form-group col-sm-12">
+            <label class=" col-md-3 control-label"> Name</label>
+            <div class="col-md-9" ng-class="{'has-error': aclRuleForm.headerName.$invalid}">
+              <input type="text" ng-animate-disabled validate-acl-rule-header-name name="headerName" class="form-control inline-block"
+                ng-model="$ctrl.aclRule.header_name" placeholder="" ng-maxlength="128" ng-required="$ctrl.aclRule.header_value.length>0">
+              <div class="error-messages" ng-messages="aclRuleForm.headerName.$error" role="alert" ng-messages-multiple="false">
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
+            </div>
+          </div>
+          <div class=" form-group col-sm-12 ">
+            <label class="col-md-3 control-label"> Value</label>
+            <div class=" col-md-9" ng-class="{'has-error': aclRuleForm.headerValue.$invalid}">
+              <input ng-animate-disabled validate-acl-rule-header-value type="text" name="headerValue" class="form-control inline-block"
+                ng-model="$ctrl.aclRule.header_value" placeholder="" ng-maxlength="128" ng-required="$ctrl.aclRule.header_name.length>0">
+              <div class="error-messages" ng-messages="aclRuleForm.headerValue.$error" role="alert" ng-messages-multiple="false">
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-
-
   </div>
+</div>
